@@ -1,5 +1,7 @@
 Revision history for Coverage::Server
 
+          - Idiomatic rename of Functions to Util
+
 0.3.1     2015-09-01 09:38:19
           - Merged Config common_links into stash_attr
 
